--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
   text-transform: uppercase;
   box-shadow: 0 -10px 10px 0 rgba(1, 1, 1, 0.05);
 }
-#footer #taskAdd {
+#footer #uusiTodo {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   width: 3rem;
@@ -59,16 +59,16 @@ body {
   will-change: transform;
   border-radius: 30px;
 }
-#footer #taskAdd:hover {
+#footer #uusiTodo:hover {
   background: rgb(16, 182, 15);
   -webkit-transform: scale(0.95);
   transform: scale(0.95);
 }
-#footer #taskAdd:active {
+#footer #uusiTodo:active {
   -webkit-transform: scale(0.9);
   transform: scale(0.9);
 }
-#footer input#taskInput {
+#footer input#tehtäväInput {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
@@ -79,21 +79,21 @@ body {
   border-radius: 0.75rem;
   background-color: white;
 }
-#footer input#taskInput:focus {
+#footer input#tehtäväInput:focus {
   outline: 0;
   border-color: white;
   color: #0d0d0d;
 }
 
-#tasks {
+#tehtävät {
   padding: 1.5rem 2rem;
 }
-#tasks #tasksList {
+#tehtävät #tehtäväLista {
   list-style-type: none;
   padding-left: 0;
   cursor: pointer;
 }
-#tasks #tasksList li {
+#tehtävät #tehtäväLista li {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   box-shadow: 0 20px 30px 0 rgba(1, 1, 1, 0.07);
@@ -104,7 +104,7 @@ body {
   font-weight: 600;
   letter-spacing: 0.03rem;
   -webkit-animation: fadeIn 0.5s linear;
-  animation: fadeIn 0.5s linear;
+  animation: fadeIn 1s linear;
   background-color: #fff;
   margin-bottom: 5px;
   position: relative;
@@ -113,28 +113,23 @@ body {
   will-change: transform;
 }
 
-#tasks #tasksList li.valmis {
-    text-decoration: line-through;
-    background-color: 
-    rgb(16, 182, 15);
-}
 
-#tasks #tasksList li:hover {
+#tehtävät #tehtäväLista li:hover {
   border-right: 65px solid red;
   border-left: 65px solid rgb(16, 182, 15);
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-transform: scale(1.15);
+  transform: scale(1.15);
   z-index: 20;
-  box-shadow: 0 20px 30px 0 rgba(1, 1, 1, 0.2);
+  box-shadow: 0 20px 30px 0 black;
 }
-#tasks #tasksList li:hover .delete {
+#tehtävät #tehtäväLista li:hover .delete {
   right: -55px;
   color: white;
   cursor: pointer;
 }
-#tasks #tasksList li .delete {
+#tehtävät #tehtäväLista li .delete {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   position: absolute;
@@ -146,7 +141,7 @@ body {
   font-size: 1rem;
 }
 
-#tasks #tasksList li .ready {
+#tehtävät #tehtäväLista li .ready {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   position: absolute;
@@ -158,10 +153,16 @@ body {
   font-size: 1rem;
 }
 
-#tasks #tasksList li:hover .ready {
+#tehtävät #tehtäväLista li:hover .ready {
   left: -60px;
   color: white;
   cursor: pointer;
+}
+
+#tehtävät #tehtäväLista li.valmis {
+  text-decoration: line-through;
+  background-color: 
+  rgb(16, 182, 15);
 }
 
 
@@ -173,7 +174,7 @@ body {
   50% {
     opacity: 0;
   }
-  100% {
+  90% {
     opacity: 1;
     margin-top: 0px;
   }
@@ -187,7 +188,7 @@ body {
   50% {
     opacity: 0;
   }
-  100% {
+  90% {
     opacity: 1;
     margin-top: 0px;
   }
@@ -200,7 +201,7 @@ body {
   50% {
     opacity: 0;
   }
-  100% {
+  90% {
     opacity: 0;
     margin-top: -50px;
   }
@@ -213,7 +214,7 @@ body {
   50% {
     opacity: 0;
   }
-  100% {
+  90% {
     opacity: 0;
     margin-top: -50px;
   }
